Issue #3213556 by Sakthivel M, ranjith_kumar_k_u, manojithape, chetanbharambe, vikashsoni, Kristen Pol, tushar_sachdeva, Devashish Jangid, Satyajit1990, larowlan: Input field description is not visible in Configure dialog box of layout builder
(cherry picked from commit 035cd7de479b1a47d3290999c1a0afb931c078ec)

--- a/core/themes/claro/css/components/dialog.pcss.css
+++ b/core/themes/claro/css/components/dialog.pcss.css
@@ -158,4 +158,8 @@
   & .form-type--boolean {
     margin-left: 0;
   }
+  & .form-item .form-item__description {
+    color: var(--color-whitesmoke);
+    font-size: 0.75rem;
+  }
 }
